Add fullscreen SCSS and apply background

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Roguelike Card Game</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="fullscreen">
   <div class="game-board">
     <div class="deck deck--left">
       <div class="card-back"></div>
