--- a/src/mockup.html
+++ b/src/mockup.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Merriweather&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="mockup.css">
 </head>
-<body>
+<body class="fullscreen">
   <header class="header">
     <h1 class="title">Arcana Abismal</h1>
     <div class="relics">
