--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       <span class="score-current">0</span>
       <span class="score-separator">/</span>
       <span class="score-goal">0</span>
-      <span class="score-coins">0 🪙</span>
+      <span class="score-coins"><span>0</span> <img src="assets/images/coin.png" alt="Coins"/></span>
     </div>
 
     <div class="hand"></div>
