--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,12 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body class="fullscreen">
-  <div class="game-board">
+  <div id="intro-screen" class="intro-screen">
+    <h1>Arcana Abismal</h1>
+    <button id="play-btn">Jugar</button>
+  </div>
+
+  <div class="game-board hidden">
     <div class="deck deck--left">
       <div class="card-back"></div>
       <span class="deck-count discard-count">0</span>
