Ajustar niveles de pecados y mostrar progreso

--- a/src/index.html
+++ b/src/index.html
@@ -28,9 +28,12 @@
     </div>
 
     <div class="scoreboard">
-      <span class="score-current">0</span>
-      <span class="score-separator">/</span>
-      <span class="score-goal">0</span>
+      <span class="score-sin">Pecado</span>
+      <div class="score-progress">
+        <span class="score-current">0</span>
+        <span class="score-separator">-</span>
+        <span class="score-goal">0</span>
+      </div>
       <span class="score-coins"><span>0</span> <img src="assets/images/coin.png" alt="Coins"/></span>
     </div>
 
