--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 <body class="fullscreen">
   <div id="intro-screen" class="intro-screen">
-    <h1>Arcana Abismal</h1>
-    <button id="play-btn">Jugar</button>
+    <h1 data-text="Arcana Abismal">Arcana Abismal</h1>
+    <button id="play-btn" class="btn-play">Jugar</button>
   </div>
 
   <div class="game-board hidden">
